--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "textarea",
     "list",
     "typescript",
-    "components"
+    "react-components"
   ],
   "repository": {
     "type": "git",
@@ -23,8 +23,7 @@
   },
   "homepage": "https://github.com/jrobsontull/react-textarea-list#readme",
   "files": [
-    "dist",
-    "README.md"
+    "dist"
   ],
   "engines": {
     "node": ">=10"
@@ -35,13 +34,16 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "react": "^16.8.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.12",
+    "@types/react": "^16.8.0",
+    "@types/react-dom": "^16.8.0",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
+    "parcel": "^2.6.0",
     "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "rollup": "^2.75.6",
     "rollup-plugin-typescript2": "^0.32.1",
     "typescript": "^4.7.3"
