--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.cache
+/.parcel-cache
+/.cache
 
 npm-debug.log*
 yarn-debug.log*
