--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,10 @@
 .env.test.local
 .env.production.local
 .cache
-/.parcel-cache
-/.cache
+/example/.parcel-cache
+/example/.cache
+.parcel-cache
+.cache
 
 npm-debug.log*
 yarn-debug.log*
