--- a/example/package.json
+++ b/example/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "parcel ./index.html --open",
+    "dev": "parcel ./index.html --no-cache --open",
     "build": "parcel build ./index.html --dist-dir ./dist --public-url"
   }
 }
