chore: small changes before package publish

--- a/example/package.json
+++ b/example/package.json
@@ -2,6 +2,6 @@
   "private": true,
   "scripts": {
     "dev": "parcel ./index.html --no-cache --open",
-    "start": "parcel build ./index.html --dist-dir ./dist"
+    "build": "parcel build ./index.html --dist-dir ./dist"
   }
 }
