--- a/package.json
+++ b/package.json
@@ -31,12 +31,9 @@
   "scripts": {
     "build:dev": "rollup -c",
     "start:dev": "rollup -c -w",
-    "start": "cd example && npm run start"
+    "start:example": "cd ./example && npm run dev"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
-  },
-  "dependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
