--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,9 @@
   },
   "extends": [
     "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:react/jsx-runtime"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -24,6 +25,13 @@
     "react/no-danger": "error",
     "react/no-invalid-html-attribute": "warn",
     "react/no-typos": "warn",
-    "react/prefer-es6-class": "warn"
+    "react/prefer-es6-class": "warn",
+    "react/jsx-uses-vars": "error",
+    "react/jsx-uses-react": "error"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
