--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "start:dev": "rollup -c -w",
     "start:example": "cd ./example && npm run dev",
     "clean": "rm -rf node_modules/",
-    "lint": "eslint src/*.tsx"
+    "lint": "eslint \"src/*.tsx\" \"example/*.tsx\"",
+    "format": "prettier --write --config .prettierrc \"src/*.tsx\" \"example/*.tsx\""
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
@@ -50,6 +51,7 @@
     "eslint-plugin-react": "^7.30.0",
     "highlight.js": "^11.5.1",
     "parcel": "^2.6.0",
+    "prettier": "^2.7.1",
     "react": "^16.8.0",
     "react-ace": "^10.1.0",
     "react-dom": "^16.8.0",
